--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lintfix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+
     "preview": "vite preview"
   },
   "dependencies": {
