--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lintfix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
-
     "preview": "vite preview"
   },
   "dependencies": {
@@ -25,6 +24,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
