--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lintfix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json:server": "npx json-server db.json"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
+    "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
