--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "json:server": "npx json-server db.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
